Bold email on main page

--- a/components/intec.universe/main.header/template.1/templates/desktop/template.10/style.css
+++ b/components/intec.universe/main.header/template.1/templates/desktop/template.10/style.css
@@ -601,3 +601,7 @@ div.widget-contacts-container > a > span {
 div.widget-contacts-container {
     color: #ffffff;
 }
+
+div.widget-contacts-container span {
+    font-weight: 700;
+}
