--- a/components/intec.universe/main.header/template.1/templates/desktop/template.10/style.css
+++ b/components/intec.universe/main.header/template.1/templates/desktop/template.10/style.css
@@ -605,3 +605,7 @@ div.widget-contacts-container {
 div.widget-contacts-container span {
     font-weight: 700;
 }
+
+.widget-contacts-container .intec-grid-item-auto span.adress {
+    font-weight: normal;
+}
