--- a/components/intec.universe/main.advantages/template.2/style.css
+++ b/components/intec.universe/main.advantages/template.2/style.css
@@ -38,8 +38,13 @@
   height: 80px;
   width: 80px;
   text-align: center;
-  padding: 3px 0px 0px 10px;
+  padding: 4px 0px 0px 0px;
   font-size: 50px;
+  color: white;
+}
+
+.widget-header {
+  font-weight: bold;
 }
 
 /*# sourceMappingURL=style.css.map */
