--- a/components/intec.universe/main.widget/contact.1/style.css
+++ b/components/intec.universe/main.widget/contact.1/style.css
@@ -1,294 +1,341 @@
 .widget.c-widget.c-widget-contact-1 .widget-content,
 .widget.c-widget.c-widget-contact-1 .widget-content-wrapper,
 .widget.c-widget.c-widget-contact-1 .widget-content-wrapper-2 {
-  position: relative;
-  display: block;
-  min-height: 600px;
-  z-index: 0;
+    position: relative;
+    display: block;
+    min-height: 600px;
+    z-index: 0;
 }
+
 .widget.c-widget.c-widget-contact-1 .widget-block {
-  position: relative;
-  display: block;
-  padding: 35px 100px;
-  visibility: hidden;
-  z-index: 1;
+    position: relative;
+    display: block;
+    padding: 35px 100px;
+    visibility: hidden;
+    z-index: 1;
 }
+
 .widget.c-widget.c-widget-contact-1 .widget-block-wrapper {
-  display: block;
-  max-width: 405px;
-  padding: 35px 50px 65px 60px;
-  margin: 0;
-  background: #393c4b;
-  visibility: visible;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  border-radius: 5px;
+    display: block;
+    max-width: 405px;
+    padding: 35px 50px 65px 60px;
+    margin: 0;
+    background: #393c4b;
+    visibility: visible;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border-radius: 5px;
 }
+
 .widget.c-widget.c-widget-contact-1 .widget-block-wrapper-2 {
-  display: block;
+    display: block;
 }
 
 hr.dark {
-  border: 1px solid #2B2F32;
+    border: 1px solid #2B2F32;
 }
+
 .widget.c-widget.c-widget-contact-1 .widget-block-title {
-  display: block;
-  font-weight: bold;
-  font-size: 17px;
-  line-height: 37px;
-  color: white;
-  margin-bottom: 24px;
+    display: block;
+    font-weight: bold;
+    font-size: 17px;
+    line-height: 37px;
+    color: white;
+    margin-bottom: 24px;
 }
 
 .widget-block-item.widget-block-item-address > div {
-  color: white;
+    color: white;
 }
 
 .widget.c-widget.c-widget-contact-1 .widget-block-items {
-  display: block;
-}
-.widget.c-widget.c-widget-contact-1 .widget-block-item {
-  display: block;
-  margin-bottom: 24px;
-}
-.widget.c-widget.c-widget-contact-1 .widget-block-item.widget-block-item-phone {
-  margin-bottom: 16px;
-}
-.widget.c-widget.c-widget-contact-1 .widget-block-item:last-child {
-  margin-bottom: 0;
-}
-.widget.c-widget.c-widget-contact-1 .widget-block-item-title {
-  display: block;
-  font-size: 14px;
-  font-weight: normal;
-  line-height: 14px;
-  letter-spacing: 1px;
-  margin-bottom: 8px;
-}
-.widget.c-widget.c-widget-contact-1 .widget-block-item-value {
-  display: block;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 24px;
+    display: block;
 }
 
-.widget.c-widget.c-widget-contact-1 .widget-block-item-value.parking  {
-  color: #7BC841;
-  font-weight: bold;
+.widget.c-widget.c-widget-contact-1 .widget-block-item {
+    display: block;
+    margin-bottom: 24px;
+}
+
+.widget.c-widget.c-widget-contact-1 .widget-block-item.widget-block-item-phone {
+    margin-bottom: 16px;
+}
+
+.widget.c-widget.c-widget-contact-1 .widget-block-item:last-child {
+    margin-bottom: 0;
+}
+
+.widget.c-widget.c-widget-contact-1 .widget-block-item-title {
+    display: block;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 14px;
+    letter-spacing: 1px;
+    margin-bottom: 8px;
+}
+
+.widget.c-widget.c-widget-contact-1 .widget-block-item-value {
+    display: block;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+}
+
+.widget.c-widget.c-widget-contact-1 .widget-block-item-value.parking {
+    color: #7BC841;
+    font-weight: bold;
 }
 
 .widget.c-widget.c-widget-contact-1 .widget-block-item-value a {
-  color: #7BC841;
-  text-decoration: none;
-  -webkit-transition-duration: 350ms;
-  -moz-transition-duration: 350ms;
-  -ms-transition-duration: 350ms;
-  -o-transition-duration: 350ms;
-  transition-duration: 350ms;
-  -webkit-transition-property: color;
-  -moz-transition-property: color;
-  -ms-transition-property: color;
-  -o-transition-property: color;
-  transition-property: color;
-  font-weight: bold;
+    color: #7BC841;
+    text-decoration: none;
+    -webkit-transition-duration: 350ms;
+    -moz-transition-duration: 350ms;
+    -ms-transition-duration: 350ms;
+    -o-transition-duration: 350ms;
+    transition-duration: 350ms;
+    -webkit-transition-property: color;
+    -moz-transition-property: color;
+    -ms-transition-property: color;
+    -o-transition-property: color;
+    transition-property: color;
+    font-weight: bold;
 }
 
-div.widget-block-item  i {
-  color: #7BC841;
-  padding-right: 5px;
+div.widget-block-items i {
+    color: #7BC841;
+    padding-right: 5px;
 }
 
 .widget.c-widget.c-widget-contact-1 .widget-block-item-value a:hover {
-  color: #0065ff;
+    color: #0065ff;
 }
+
 .widget.c-widget.c-widget-contact-1 .widget-map {
-  position: absolute;
-  display: block;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  background: #f7f7f7;
-  z-index: 0;
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background: #f7f7f7;
+    z-index: 0;
 }
+
 .widget.c-widget.c-widget-contact-1 .widget-map .ymaps-controls-lefttop {
-  top: auto;
-  bottom: 0;
+    top: auto;
+    bottom: 0;
 }
+
 .widget.c-widget.c-widget-contact-1 .widget-map .ymaps-controls-lefttop > ymaps {
-  left: 50% !important;
-  right: auto !important;
-  top: auto !important;
-  bottom: 20px !important;
-  border-radius: 32px;
-  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
-  background: #fff;
-  margin-left: -88px;
+    left: 50% !important;
+    right: auto !important;
+    top: auto !important;
+    bottom: 20px !important;
+    border-radius: 32px;
+    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
+    background: #fff;
+    margin-left: -88px;
 }
+
 .widget.c-widget.c-widget-contact-1 .widget-map .ymaps-b-zoom {
-  width: 80px;
-  height: 36px;
-  padding: 6px 10px;
+    width: 80px;
+    height: 36px;
+    padding: 6px 10px;
 }
+
 .widget.c-widget.c-widget-contact-1 .widget-map .ymaps-b-zoom:before {
-  content: "";
-  position: absolute;
-  right: 50%;
-  top: 5px;
-  bottom: 5px;
-  width: 2px;
-  background-color: #f5f5f5;
+    content: "";
+    position: absolute;
+    right: 50%;
+    top: 5px;
+    bottom: 5px;
+    width: 2px;
+    background-color: #f5f5f5;
 }
+
 .widget.c-widget.c-widget-contact-1 .widget-map .ymaps-b-zoom__scale {
-  display: none;
+    display: none;
 }
+
 .widget.c-widget.c-widget-contact-1 .widget-map .ymaps-b-zoom__button {
-  display: inline-block;
-  height: 26px;
-  width: 30px;
-  opacity: 0.6;
+    display: inline-block;
+    height: 26px;
+    width: 30px;
+    opacity: 0.6;
 }
+
 .widget.c-widget.c-widget-contact-1 .widget-map .ymaps-b-zoom__button:hover {
-  opacity: 1;
+    opacity: 1;
 }
+
 .widget.c-widget.c-widget-contact-1 .widget-map .ymaps-b-form-button__content {
-  background-image: none;
+    background-image: none;
 }
+
 .widget.c-widget.c-widget-contact-1 .widget-map .ymaps-b-form-button {
-  background-image: none;
-  overflow: visible;
+    background-image: none;
+    overflow: visible;
 }
+
 .widget.c-widget.c-widget-contact-1 .widget-map .ymaps-b-form-button__left {
-  background-image: none;
+    background-image: none;
 }
+
 .widget.c-widget.c-widget-contact-1 .widget-map .ymaps-b-zoom__button_type_minus {
-  background-image: none;
-  text-align: center;
+    background-image: none;
+    text-align: center;
 }
+
 .widget.c-widget.c-widget-contact-1 .widget-map .ymaps-b-zoom__button_type_plus {
-  background-image: none;
-  text-align: center;
+    background-image: none;
+    text-align: center;
 }
+
 .widget.c-widget.c-widget-contact-1 .widget-map .ymaps-b-zoom__button_type_minus .ymaps-b-zoom__sprite {
-  width: 100%;
-  height: 100%;
-  background-image: url("svg/minus.svg");
-  left: 0;
-  background-position: -6px -3px;
+    width: 100%;
+    height: 100%;
+    background-image: url("svg/minus.svg");
+    left: 0;
+    background-position: -6px -3px;
 }
+
 .widget.c-widget.c-widget-contact-1 .widget-map .ymaps-b-zoom__button_type_plus .ymaps-b-zoom__sprite {
-  width: 100%;
-  height: 100%;
-  background-image: url("svg/plus.svg");
-  left: 0;
-  top: 0;
-  background-position: -1px -3px;
+    width: 100%;
+    height: 100%;
+    background-image: url("svg/plus.svg");
+    left: 0;
+    top: 0;
+    background-position: -1px -3px;
 }
+
 .widget.c-widget.c-widget-contact-1 .widget-map .ymaps-controls-righttop {
-  bottom: 0;
-  top: auto;
+    bottom: 0;
+    top: auto;
 }
+
 .widget.c-widget.c-widget-contact-1 .widget-map .ymaps-controls-righttop > ymaps {
-  top: auto !important;
-  bottom: 20px !important;
-  right: auto !important;
-  left: 50%;
-  margin-left: 2px;
+    top: auto !important;
+    bottom: 20px !important;
+    right: auto !important;
+    left: 50%;
+    margin-left: 2px;
 }
+
 .widget.c-widget.c-widget-contact-1 .widget-map .ymaps-controls-righttop .ymaps-b-select.ymaps-b-select_control_listbox {
-  background: #fff;
-  border-radius: 32px;
-  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
-  padding: 3px 0 3px 25px;
-  position: relative;
+    background: #fff;
+    border-radius: 32px;
+    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
+    padding: 3px 0 3px 25px;
+    position: relative;
 }
+
 .widget.c-widget.c-widget-contact-1 .widget-map .ymaps-controls-righttop .ymaps-b-select.ymaps-b-select_control_listbox:before {
-  content: "";
-  position: absolute;
-  left: 5px;
-  top: 2px;
-  width: 25px;
-  height: 25px;
-  background-image: url("svg/shema.svg");
+    content: "";
+    position: absolute;
+    left: 5px;
+    top: 2px;
+    width: 25px;
+    height: 25px;
+    background-image: url("svg/shema.svg");
 }
+
 .widget.c-widget.c-widget-contact-1 .widget-map .ymaps-b-select_state_opened .ymaps-b-popupa_layout_yes {
-  position: absolute;
-  left: 3px;
-  bottom: 100%;
-  margin-bottom: 3px;
-  top: auto;
+    position: absolute;
+    left: 3px;
+    bottom: 100%;
+    margin-bottom: 3px;
+    top: auto;
 }
+
 .widget.c-widget.c-widget-contact-1 .widget-map .ymaps-b-select_state_opened .ymaps-b-popupa_layout_yes .ymaps-b-popupa__shadow {
-  display: none;
+    display: none;
 }
+
 .widget.c-widget.c-widget-contact-1 .widget-map .ymaps-b-select_state_opened .ymaps-b-popupa_layout_yes .ymaps-b-popupa__body {
-  border-radius: 8px;
-  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
-  padding: 5px;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
+    padding: 5px;
 }
+
 .widget.c-widget.c-widget-contact-1[data-block-show=true][data-block-view=left] .widget-block {
-  width: 40%;
-  padding: 0;
-  background: #fff;
-}
-.widget.c-widget.c-widget-contact-1[data-block-show=true][data-block-view=left] .widget-block-wrapper {
-  padding: 60px 40px 60px 40px;
-  margin: 0 auto;
-}
-.widget.c-widget.c-widget-contact-1[data-block-show=true][data-block-view=left] .widget-map {
-  left: auto;
-  width: 60%;
-}
-@media all and (max-width: 1000px) {
-  .widget.c-widget.c-widget-contact-1 .widget-content,
-.widget.c-widget.c-widget-contact-1 .widget-content-wrapper,
-.widget.c-widget.c-widget-contact-1 .widget-content-wrapper-2 {
-    min-height: auto;
-  }
-  .widget.c-widget.c-widget-contact-1 .widget-block {
-    width: auto;
+    width: 40%;
     padding: 0;
     background: #fff;
-  }
-  .widget.c-widget.c-widget-contact-1 .widget-block-wrapper {
+}
+
+.widget.c-widget.c-widget-contact-1[data-block-show=true][data-block-view=left] .widget-block-wrapper {
     padding: 60px 40px 60px 40px;
     margin: 0 auto;
-  }
-  .widget.c-widget.c-widget-contact-1 .widget-map {
-    position: relative;
-    top: auto;
-    right: auto;
-    bottom: auto;
-    left: auto;
-    width: auto;
-    height: 400px;
-  }
-  .widget.c-widget.c-widget-contact-1[data-block-show=true][data-block-view=left] .widget-map,
-.widget.c-widget.c-widget-contact-1[data-block-show=true][data-block-view=left] .widget-block {
-    width: 100%;
-  }
 }
+
+.widget.c-widget.c-widget-contact-1[data-block-show=true][data-block-view=left] .widget-map {
+    left: auto;
+    width: 60%;
+}
+
+.flex-wrap {
+    display: flex;
+}
+
+@media all and (max-width: 1000px) {
+    .widget.c-widget.c-widget-contact-1 .widget-content,
+    .widget.c-widget.c-widget-contact-1 .widget-content-wrapper,
+    .widget.c-widget.c-widget-contact-1 .widget-content-wrapper-2 {
+        min-height: auto;
+    }
+
+    .widget.c-widget.c-widget-contact-1 .widget-block {
+        width: auto;
+        padding: 0;
+        background: #fff;
+    }
+
+    .widget.c-widget.c-widget-contact-1 .widget-block-wrapper {
+        padding: 60px 40px 60px 40px;
+        margin: 0 auto;
+    }
+
+    .widget.c-widget.c-widget-contact-1 .widget-map {
+        position: relative;
+        top: auto;
+        right: auto;
+        bottom: auto;
+        left: auto;
+        width: auto;
+        height: 400px;
+    }
+
+    .widget.c-widget.c-widget-contact-1[data-block-show=true][data-block-view=left] .widget-map,
+    .widget.c-widget.c-widget-contact-1[data-block-show=true][data-block-view=left] .widget-block {
+        width: 100%;
+    }
+}
+
 @media all and (max-width: 768px) {
-  .widget.c-widget.c-widget-contact-1[data-block-show=true][data-block-view=over] .widget-block {
-    padding: 0;
-  }
-  .widget.c-widget.c-widget-contact-1[data-block-show=true][data-block-view=over] .widget-block-wrapper {
-    padding-left: 0;
-    padding-right: 0;
-    padding-bottom: 40px;
-  }
-  .widget.c-widget.c-widget-contact-1[data-block-show=true][data-block-view=over] .widget-map {
-    position: relative;
-    height: 350px;
-  }
-  .widget.c-widget.c-widget-contact-1[data-block-show=true][data-block-view=over][data-wide=true] .widget-block-wrapper {
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 40px;
-  }
+    .widget.c-widget.c-widget-contact-1[data-block-show=true][data-block-view=over] .widget-block {
+        padding: 0;
+    }
+
+    .widget.c-widget.c-widget-contact-1[data-block-show=true][data-block-view=over] .widget-block-wrapper {
+        padding-left: 0;
+        padding-right: 0;
+        padding-bottom: 40px;
+    }
+
+    .widget.c-widget.c-widget-contact-1[data-block-show=true][data-block-view=over] .widget-map {
+        position: relative;
+        height: 350px;
+    }
+
+    .widget.c-widget.c-widget-contact-1[data-block-show=true][data-block-view=over][data-wide=true] .widget-block-wrapper {
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-bottom: 40px;
+    }
 }
 
 /*# sourceMappingURL=style.css.map */
