--- a/components/intec.universe/main.slider/template.3/style.css
+++ b/components/intec.universe/main.slider/template.3/style.css
@@ -304,8 +304,10 @@
   right: 0;
   bottom: 0;
   padding: 24px;
-  background: linear-gradient(to top, rgba(0, 0, 0, 0.6) 20%, transparent);
+  background-coloround: linear-gradient(to top, rgba(0, 0, 0, 0.6) 20%, transparent);
   z-index: 3;
+  display: none;
+
 }
 .c-slider.c-slider-template-3 .widget-block-header {
   font-size: 18px;
@@ -330,7 +332,7 @@
   max-height: 40px;
 }
 .c-slider.c-slider-template-3 .widget-block:hover .widget-block-fade {
-  opacity: 1;
+  opacity: 0.3;
 }
 .c-slider.c-slider-template-3 [data-blocks-position=right] .widget-slider {
   width: 75%;
@@ -356,11 +358,11 @@
   height: 100%;
 }
 .c-slider.c-slider-template-3 [data-effect-scale=true] .widget-block:hover .widget-block-picture {
-  -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  -o-transform: scale(1.1);
-  transform: scale(1.1);
+  /*-webkit-transform: scale(1.1);*/
+  /*-moz-transform: scale(1.1);*/
+  /*-ms-transform: scale(1.1);*/
+  /*-o-transform: scale(1.1);*/
+  /*transform: scale(1.1);*/
 }
 .c-slider.c-slider-template-3 .widget-slider-nav,
 .c-slider.c-slider-template-3 .widget-slider-dots {
