border line between 3 mini banners under main banner

--- a/components/intec.universe/main.slider/template.3/style.css
+++ b/components/intec.universe/main.slider/template.3/style.css
@@ -267,6 +267,8 @@
 .c-slider.c-slider-template-3 .widget-block-wrapper {
   display: block;
   text-decoration: none;
+  border: 1px solid #e7e2de;
+  margin: 1px;
 }
 .c-slider.c-slider-template-3 .widget-block-picture {
   background-size: cover;
