contain images in 3 mini banners

--- a/components/intec.universe/main.slider/template.3/style.css
+++ b/components/intec.universe/main.slider/template.3/style.css
@@ -271,7 +271,7 @@
   margin: 1px;
 }
 .c-slider.c-slider-template-3 .widget-block-picture {
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
   z-index: 1;
