--- a/components/intec.universe/main.brands/template.1/style.css
+++ b/components/intec.universe/main.brands/template.1/style.css
@@ -253,12 +253,14 @@
 
 @media all and (max-width: 600px) {
     .widget.c-brands.c-brands-template-1 .widget-content {
+        display: none;
         overflow-x: auto;
         overflow-y: hidden;
         padding: 0 40px 24px 40px;
     }
 
     .widget.c-brands.c-brands-template-1 .widget-content > div {
+        display: none;
         width: 100%;
         -webkit-box-align: center !important;
         -ms-flex-align: center !important;
