--- a/components/intec.universe/main.slider/template.3/style.css
+++ b/components/intec.universe/main.slider/template.3/style.css
@@ -25,7 +25,7 @@
   position: relative;
 }
 .c-slider.c-slider-template-3 .widget-item-block-mobile {
-  display: block;
+  display: none;
   position: absolute;
   width: 100%;
   height: 100%;
