--- a/components/intec.universe/main.header/template.1/style.css
+++ b/components/intec.universe/main.header/template.1/style.css
@@ -68,8 +68,8 @@
 }
 .c-header.c-header-template-1 .widget-popups-phones-1-button svg {
   display: block;
-  fill: #bebebf;
-  stroke: #bebebf;
+  fill: #7bc841;
+  stroke: #7bc841;
 }
 .c-header.c-header-template-1 .widget-popups-phones-1-button svg path {
   -webkit-transition-duration: 350ms;
