--- a/components/intec.universe/main.header/template.1/templates/mobile/template.2/style.css
+++ b/components/intec.universe/main.header/template.1/templates/mobile/template.2/style.css
@@ -37,9 +37,10 @@
 }
 .c-header.c-header-template-1 .widget-view.widget-view-mobile .widget-wrapper {
   position: relative;
+  background-color: #393C4B;
 }
 .c-header.c-header-template-1 .widget-view.widget-view-mobile .widget-item {
-  padding: 20px 0;
+  padding: 15px 0;
 }
 .c-header.c-header-template-1 .widget-view.widget-view-mobile .widget-menu-wrap {
   position: static;
@@ -47,7 +48,7 @@
 .c-header.c-header-template-1 .widget-view.widget-view-mobile .widget-logotype {
   display: inline-block;
   width: 100%;
-  max-width: 130px;
+  max-width: 260px;
   text-decoration: none;
   color: #1d1d1d;
 }
