--- a/css/scheme.scss
+++ b/css/scheme.scss
@@ -28,8 +28,7 @@ $template-width: $template-width + 40;
     color: $template-color !important;
 }
 .intec-cl-text-hover:hover {
-    //color: $template-color !important;
-    color: #7bc841;
+    color: $template-color !important;
 }
 
 .intec-cl-background {
