--- a/components/intec.universe/main.footer/template.1/style.css
+++ b/components/intec.universe/main.footer/template.1/style.css
@@ -42,4 +42,14 @@
   }
 }
 
+@media all and (max-width: 1000px) {
+  .intec-template-layout-footer .widget-part.widget-part-left.intec-grid-item-auto {
+    display: none;
+  }
+
+  .c-footer.c-footer-template-1[data-theme=dark] {
+    background-color: #393c4b;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
