--- a/components/intec.universe/main.footer/template.1/style.css
+++ b/components/intec.universe/main.footer/template.1/style.css
@@ -16,7 +16,7 @@
   background-color: #E3E3E3;
 }
 .c-footer.c-footer-template-1[data-theme=dark] {
-  background-color: #2b2f32;
+  background-color: #393c4b;
 }
 .c-footer.c-footer-template-1[data-theme=dark] .widget .widget-header .widget-title {
   color: #fff;
